tests/verify/fail/panic.rs
// error-pattern: error[P0002]

extern crate prusti_contracts;

fn main() {
    panic!();
}
